Replaced a call to toString() on a byte[] by a call to StringTools.dumpBytes() Replaced new Integer( xxx ) by Integer.valueof( xxx )
git-svn-id: https://svn.apache.org/repos/asf/directory/trunks/shared@491275 13f79535-47bb-0310-9956-ffa450edef68